[package]
name = "esp32_tm1637"
version = "0.1.0"
authors = ["Sergei Makarov <setser200018@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "embedded-hal", version = "0.2.7", features = [ "unproven" ] }
log = { version = "0.4.18" }

[dev-dependencies]
esp-hal = { package = "esp32-hal", version = "0.16.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32", "log"] }

[[example]]
name = "send-bytes"

[[example]]
name = "send-digits"

[[example]]
name = "clocks"

[profile.lto]
inherits = "release"
opt-level = 3
debug = 0
strip = "symbols"
lto = "thin"
